# poetry-demo

./: README.md  alembic.ini  pyproject.toml  scripts.py
alembic/: env.py
alembic/versions/: 53389c483703_first_migration.py
poetry_demo/: main.py  models.py
tests/: test_main.py
