[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Carlos Gómez <carlosgomez.deb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[tool.isort]
profile = "autopep8"

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "migrations"]

[tool.poetry.scripts]
start = "uvicorn poetry_demo.main:app --reload"
format = "scripts:format"
lint = "scripts:lint"
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
